@@ -27,14 +27,14 @@ xrandr_LDADD = $(XRANDR_LIBS)
 xrandr_SOURCES =	\
         xrandr.c
 
-appman_SOURCES = \
+appman_PRE = \
         xrandr.man
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST = $(appman_SOURCES)
+EXTRA_DIST = $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
